--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<div class="container">
 		<div class="sidebar">
 			<div class="sidebar-top">
-				<img class="profile-image" src="https://scontent-sin6-1.xx.fbcdn.net/v/t1.0-1/p160x160/11951154_1695767720657897_1330481320457713873_n.jpg?oh=983ae8aec438a0d5b6212f2fc1be98a0&oe=591C987E"/>
+				<img class="profile-image" src="https://scontent-sit4-1.xx.fbcdn.net/v/t1.0-1/p160x160/15873358_1902556499979017_9066174687597161739_n.jpg?oh=75ecca830b213664e56eed5738440bec&oe=592407CA"/>
 				<div class="profile-basic">
 					<h1 class="name">Riddhi Patel</h1>
 					<h4 class="designation"> student </h4>
