--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<div class="container">
 		<div class="sidebar">
 			<div class="sidebar-top">
-				<img class="profile-image" src="https://scontent-sit4-1.xx.fbcdn.net/v/t1.0-1/p160x160/15873358_1902556499979017_9066174687597161739_n.jpg?oh=75ecca830b213664e56eed5738440bec&oe=592407CA"/>
+				<img class="profile-image" src="https://scontent.fbom1-2.fna.fbcdn.net/v/t1.0-1/p160x160/16003228_1905762199658447_2533864519657522058_n.jpg?oh=4eaefaeda38ee9a62b5b6f382c5cc214&oe=591F4943"/>
 				<div class="profile-basic">
 					<h1 class="name">Riddhi Patel</h1>
 					<h4 class="designation"> student </h4>
