--- a/index.html
+++ b/index.html
@@ -1,41 +1,41 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>My Resume</title>
+	<title>Riddhi P</title>
+	<link href="https://fonts.googleapis.com/css?family=Cherry+Swash|Poiret+One" rel="stylesheet">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
 	<div class="container">
 		<div class="sidebar">
 			<div class="sidebar-top">
-				<img class="profile-image" src="https://scontent.fbom1-2.fna.fbcdn.net/v/t1.0-1/p160x160/16003228_1905762199658447_2533864519657522058_n.jpg?oh=4eaefaeda38ee9a62b5b6f382c5cc214&oe=591F4943"/>
+				<img class="profile-image" src="img/riddhi2.jpg">
 				<div class="profile-basic">
 					<h1 class="name">Riddhi Patel</h1>
 					<h4 class="designation"> student </h4>
 				</div>
 			</div>
 			<div class="profile-info">
-				<p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 	
+				<p> My self Riddhi Patel. I am studing in computer engineering at silveroak college of engg. & tech. 	
 				</p>
 			</div>
 			<div class="profile-info">
-				<p class="key">Contact : </p>
-				<p class="value">9712763584</p>
+				<p class="key"><i class="fa fa-phone" aria-hidden="true"></i> Contact : 9712763584 </p>
 			</div>
 
 			<div class="profile-info">
-				<p class="key" >Email : </p>
-				<p class="value" >patelriddhi28397@gmail.com</p>
+				<p class="key" ><i class="fa fa-envelope" aria-hidden="true"></i> Email : patelriddhi28397@gmail.com </p>
 			</div>
 
 			<div class="profile-info">
-				<p class="key" >Address : </p>
+				<p class="key" ><i class="fa fa-camera-retro fa-5x"></i> Address : </p>
 				<p class="value" >M-103, Garden paradise, near neel kanth veela bunglows, behind DPS school, North Bopal, Bopal-380058</p>
 			</div>
 			<div class="profile-info">
-				<p>My self riddhi patel. I am studying in silver oak college of engg, & tech.</p>
-				<a class="social-media" href="https://www.facebook.com/photo.php?fbid=1695767720657897&set=a.1396431950591477.1073741826.100006740563201&type=3&source=11" target="_blank" >Facebook</a>
-				<a class="social-media" href="http://facebook.com/anupama.panchal" target="_blank" >Instagram</a>
+				<p>Other Contacts:</p>
+				<a class="social-media" href="https://www.facebook.com/photo.php?fbid=1695767720657897&set=a.1396431950591477.1073741826.100006740563201&type=3&source=11" target="_blank" ><i class="fa fa-facebook" aria-hidden="true"></i> </a>
+				<a class="social-media" href="https://instagram.fbom1-2.fna.fbcdn.net/t51.2885-19/s150x150/16110604_1262593977168665_8977687744176193536_n.jpg" target="_blank" ><i class="fa fa-instagram" aria-hidden="true"></i> </a>
 			</div>
 		</div>
 		<div class="content">
@@ -65,22 +65,19 @@
 				<div class="info">
 					<p class="sub-heading">studying in silver oak engg. & tech.
 </p>
-					<p class="duration">JAN 2016 - DEC 2016</p>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor incididunt ut labore et dolore magna aliqua.</p>
+					<p class="duration">batch 2014-2018</p>
+					<p>I m studing in silver oak college of engg. & trch. </p>
 				</div>
 				<div class="info">
-					<p class="sub-heading">studying in silver oak engg. & tech.
+					<p class="sub-heading">Higher Secondary Education
 </p>
-					<p class="duration">JAN 2016 - DEC 2016</p>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor incididunt ut labore et dolore magna aliqua.</p>
+					<!-- <p class="duration">JAN 2016 - DEC 2016</p> -->
+					<p>I completed my Higher Secondary Education at Navrang High School,Navrangpura,A'bad.</p>
 				</div>
 				<div class="info">
-					<p class="sub-heading">studying in silver oak engg. & tech.</p>
-					<p class="duration">JAN 2016 - DEC 2016</p>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor incididunt ut labore et dolore magna aliqua.</p>
+					<p class="sub-heading">Primary & Secondary Education</p>
+					<!-- <p class="duration">JAN 2016 - DEC 2016</p> -->
+					<p>I Completed my primary education at Hastaful Primary School,Naranpura,A'bad & I completed my secondary Education at Vishvaniketan Secondary School,Naranpura,A'bad.</p>
 				</div>
 			</div>
 		</div>
