--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<div class="container">
 		<div class="sidebar">
 			<div class="sidebar-top">
-				<img class="profile-image" src="img/riddhi2.jpg">
+				<img class="profile-image" src="riddhi2.jpg">
 				<div class="profile-basic">
 					<h1 class="name">Riddhi Patel</h1>
 					<h4 class="designation"> student </h4>
