--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Riddhi P</title>
+	<title>Riddhi Patel</title>
 	<link href="https://fonts.googleapis.com/css?family=Cherry+Swash|Poiret+One" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
@@ -10,14 +10,19 @@
 	<div class="container">
 		<div class="sidebar">
 			<div class="sidebar-top">
-				<img class="profile-image" src="https://scontent.fbom1-2.fna.fbcdn.net/v/t1.0-1/p160x160/16003228_1905762199658447_2533864519657522058_n.jpg?oh=4eaefaeda38ee9a62b5b6f382c5cc214&oe=591F4943"/>
+			<div class="profileBox">
+				<img class="profile-image" src="img/riddhi2.jpg">
+				<h1 class="name">Riddhi Patel</h1>
+			</div>
 				<div class="profile-basic">
-					<h1 class="name">Riddhi Patel</h1>
-					<h4 class="designation"> student </h4>
+
+					<!-- <h1 class="name">Riddhi Patel</h1> -->
+					<!-- <h4 class="designation"> student </h4> -->
 				</div>
 			</div>
 			<div class="profile-info">
-				<p> My self Riddhi Patel. I am studing in computer engineering at silveroak college of engg. & tech. 	
+			
+				<p> My self Riddhi Patel. I am studing in computer engineering at silveroak college of engg. & tech. I want to be a Web-designer.	
 				</p>
 			</div>
 			<div class="profile-info">
@@ -33,33 +38,12 @@
 				<p class="value" >M-103, Garden paradise, near neel kanth veela bunglows, behind DPS school, North Bopal, Bopal-380058</p>
 			</div>
 			<div class="profile-info">
-				<p>Other Contacts:</p>
+				<b>Other Contacts:</b>
 				<a class="social-media" href="https://www.facebook.com/photo.php?fbid=1695767720657897&set=a.1396431950591477.1073741826.100006740563201&type=3&source=11" target="_blank" ><i class="fa fa-facebook" aria-hidden="true"></i> </a>
 				<a class="social-media" href="https://instagram.fbom1-2.fna.fbcdn.net/t51.2885-19/s150x150/16110604_1262593977168665_8977687744176193536_n.jpg" target="_blank" ><i class="fa fa-instagram" aria-hidden="true"></i> </a>
 			</div>
 		</div>
 		<div class="content">
-			<div class="work-experience">
-				<h1 class="heading">Work Experience</h1>
-				<div class="info">
-					<p class="sub-heading">studying in silver oak engg. & tech. </p>
-					<p class="duration">JAN 2016 - DEC 2016</p>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor incididunt ut labore et dolore magna aliqua.</p>
-				</div>
-				<div class="info">
-					<p class="sub-heading">studying in silver oak engg. & tech.</p>
-					<p class="duration">JAN 2016 - DEC 2016</p>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor incididunt ut labore et dolore magna aliqua.</p>
-				</div>
-				<div class="info">
-					<p class="sub-heading">studying in silver oak engg. & tech.</p>
-					<p class="duration">JAN 2016 - DEC 2016</p>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor incididunt ut labore et dolore magna aliqua.</p>
-				</div>
-			</div>
 			<div class="education">
 				<h1 class="heading">Education</h1>
 				<div class="info">
@@ -78,6 +62,36 @@
 					<p class="sub-heading">Primary & Secondary Education</p>
 					<!-- <p class="duration">JAN 2016 - DEC 2016</p> -->
 					<p>I Completed my primary education at Hastaful Primary School,Naranpura,A'bad & I completed my secondary Education at Vishvaniketan Secondary School,Naranpura,A'bad.</p>
+				</div>
+
+			</div>
+			
+			<div class="achievment">
+				<h1 class="heading">Achievment</h1>
+				<div class="info">
+					<!-- <p class="sub-heading">studying in silver oak engg. & tech. </p> -->
+					<!-- <p class="duration">JAN 2016 - DEC 2016</p> -->
+					<ul>
+						<li>
+						I got a first class in second year
+						</li>
+						<li>
+						I got a distriction in 12th science.
+						</li>
+						<li>
+						I got a distriction in 10th.
+						</li>
+					</ul>
+				</div>
+				
+			</div>
+			<div class="work-experience">
+				<h1 class="heading">Work Experience</h1>
+				<div class="info">
+					<p class="sub-heading">Studying in silver oak engg. & tech.</p>
+					<p class="duration">JAN 2016 - DEC 2016</p>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+					tempor incididunt ut labore et dolore magna aliqua.</p>
 				</div>
 			</div>
 		</div>
