--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<div class="sidebar">
 			<div class="sidebar-top">
 			<div class="profileBox">
-				<img class="profile-image" src="https://scontent.fbom1-1.fna.fbcdn.net/v/t1.0-1/p160x160/16003228_1905762199658447_2533864519657522058_n.jpg?oh=4eaefaeda38ee9a62b5b6f382c5cc214&oe=591F4943"/>
+				<img class="profile-image" src="riddhi2.JPG"/>
 				<h1 class="name">Riddhi Patel</h1>
 			</div>
 				<div class="profile-basic">
