--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<div class="sidebar">
 			<div class="sidebar-top">
 			<div class="profileBox">
-				<img class="profile-image" src="riddhi2.JPG"/>
+				<img class="profile-image" src="img/riddhi2.jpg">
 				<h1 class="name">Riddhi Patel</h1>
 			</div>
 				<div class="profile-basic">
@@ -22,7 +22,7 @@
 			</div>
 			<div class="profile-info">
 			
-				<p> My self Riddhi Patel. I am studing in computer engineering at silveroak college of engg. & tech. I want to be a Web-designer.	
+				<p> My self Riddhi Patel. I am Studing in Computer Engineering at Silveroak college of engg. & tech. I want to be a Web-designer.	
 				</p>
 			</div>
 			<div class="profile-info">
@@ -34,7 +34,7 @@
 			</div>
 
 			<div class="profile-info">
-				<p class="key" ><i class="fa fa-camera-retro fa-5x"></i> Address : </p>
+				<p class="key" ><i class="fa fa-address-book" aria-hidden="true"></i> Address : </p>
 				<p class="value" >M-103, Garden paradise, near neel kanth veela bunglows, behind DPS school, North Bopal, Bopal-380058</p>
 			</div>
 			<div class="profile-info">
@@ -45,12 +45,12 @@
 		</div>
 		<div class="content">
 			<div class="education">
-				<h1 class="heading">Education</h1>
+				<h1 class="heading"><i class="fa fa-book" aria-hidden="true"></i> Education</h1>
 				<div class="info">
-					<p class="sub-heading">studying in silver oak engg. & tech.
+					<p class="sub-heading">Studying in Silver oak  college of Engg. & Tech.
 </p>
-					<p class="duration">batch 2014-2018</p>
-					<p>I m studing in silver oak college of engg. & trch. </p>
+					<p class="duration">Batch 2014-2018</p>
+					<p>I am Studing in Silver oak college of Engg. & Tech. </p>
 				</div>
 				<div class="info">
 					<p class="sub-heading">Higher Secondary Education
@@ -67,13 +67,13 @@
 			</div>
 			
 			<div class="achievment">
-				<h1 class="heading">Achievment</h1>
+				<h1 class="heading"><i class="fa fa-graduation-cap" aria-hidden="true"></i> Achievment</h1>
 				<div class="info">
 					<!-- <p class="sub-heading">studying in silver oak engg. & tech. </p> -->
 					<!-- <p class="duration">JAN 2016 - DEC 2016</p> -->
 					<ul>
 						<li>
-						I got a first class in second year
+						I got a first class in second year.
 						</li>
 						<li>
 						I got a distriction in 12th science.
@@ -85,13 +85,28 @@
 				</div>
 				
 			</div>
-			<div class="work-experience">
-				<h1 class="heading">Work Experience</h1>
+			<div class="Other-Activity">
+				<h1 class="heading"><i class="fa fa-pencil-square-o" aria-hidden="true"></i> Other-Activity</h1>
 				<div class="info">
-					<p class="sub-heading">Studying in silver oak engg. & tech.</p>
-					<p class="duration">JAN 2016 - DEC 2016</p>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor incididunt ut labore et dolore magna aliqua.</p>
+					<!-- <p class="sub-heading">Other Activity</p> -->
+					<!-- <p class="duration">JAN 2016 - DEC 2016</p> -->
+					<!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod -->
+					<!-- tempor incididunt ut labore et dolore magna aliqua.</p> -->
+					<ul>
+						<li>
+							I attented many Seminar related to Web-designing.
+						</li>
+						<li>
+							I attended workshop on Hekathon-2017 which was in L.D. Engg.& Tech,Ahmedabad.
+							</li>
+						<li>
+							I Participate many competative Exams and got a very good marks.
+						</li>
+						<li>
+							I participate many sports compition also and got the silver medal in 100 meter race & got different types of Prizes.
+
+						</li>
+					</ul>
 				</div>
 			</div>
 		</div>
