--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<div class="sidebar">
 			<div class="sidebar-top">
 			<div class="profileBox">
-				<img class="profile-image" src="img/riddhi2.jpg">
+				<img class="profile-image" src="riddhi2.jpg">
 				<h1 class="name">Riddhi Patel</h1>
 			</div>
 				<div class="profile-basic">
