--- a/index.html
+++ b/index.html
@@ -97,13 +97,10 @@
 							I attented many Seminar related to Web-designing.
 						</li>
 						<li>
-							I attended workshop on Hekathon-2017 which was in L.D. Engg.& Tech,Ahmedabad.
-							</li>
-						<li>
-							I Participate many competative Exams and got a very good marks.
+							I Participated many Competative Exams and got a good Rank.
 						</li>
 						<li>
-							I participate many sports compition also and got the silver medal in 100 meter race & got different types of Prizes.
+							I participate many sports compition also and got different different Prizes.
 
 						</li>
 					</ul>
