--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
 				<p class="key" ><i class="fa fa-envelope" aria-hidden="true"></i> Email : patelriddhi28397@gmail.com </p>
 			</div>
 
-			<div class="profile-info">
+<!-- 			<div class="profile-info">
 				<p class="key" ><i class="fa fa-address-book" aria-hidden="true"></i> Address : </p>
 				<p class="value" >M-103, Garden paradise, near neel kanth veela bunglows, behind DPS school, North Bopal, Bopal-380058</p>
-			</div>
-			<div class="profile-info">
+			</div>-->
+			<div class="profile-info"> 
 				<b>Other Contacts:</b>
 				<a class="social-media" href="https://www.facebook.com/photo.php?fbid=1695767720657897&set=a.1396431950591477.1073741826.100006740563201&type=3&source=11" target="_blank" ><i class="fa fa-facebook" aria-hidden="true"></i> </a>
 				<a class="social-media" href="https://instagram.fbom1-2.fna.fbcdn.net/t51.2885-19/s150x150/16110604_1262593977168665_8977687744176193536_n.jpg" target="_blank" ><i class="fa fa-instagram" aria-hidden="true"></i> </a>
