--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
 			</div>
 			<div class="profile-info">
 			
-				<p> My self Riddhi Patel. I am Studing in Computer Engineering at Silveroak college of engg. & tech. I want to be a Web-designer.	
-				</p>
+				<p>Riddhi Patel.<n>Computer Engineer</p>
 			</div>
 			<div class="profile-info">
 				<p class="key"><i class="fa fa-phone" aria-hidden="true"></i> Contact : 9712763584 </p>
