--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 			<div class="profile-info"> 
 				<b>Other Contacts:</b>
 				<a class="social-media" href="https://www.facebook.com/photo.php?fbid=1695767720657897&set=a.1396431950591477.1073741826.100006740563201&type=3&source=11" target="_blank" ><i class="fa fa-facebook" aria-hidden="true"></i> </a>
-				<a class="social-media" href="https://instagram.fbom1-2.fna.fbcdn.net/t51.2885-19/s150x150/16110604_1262593977168665_8977687744176193536_n.jpg" target="_blank" ><i class="fa fa-instagram" aria-hidden="true"></i> </a>
+				<a class="social-media" href="https://www.instagram.com/_ridds_/?hl=en" target="_blank" ><i class="fa fa-instagram" aria-hidden="true"></i> </a>
 			</div>
 		</div>
 		<div class="content">
