--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<div class="sidebar">
 			<div class="sidebar-top">
 			<div class="profileBox">
-				<img class="profile-image" src="C:\Users\Tiger\Desktop\canada\riddhi2.JPG">
+				<img class="profile-image" src="riddhi2.JPG">
 				<h1 class="name">Riddhi Patel</h1>
 			</div>
 			</div>
