--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 				<h1 class="heading"><i class="fa fa-graduation-cap" aria-hidden="true"></i> Experience</h1>
 				
 					<div class="info">
-					<p class="sub-heading">Web Designer <br>At CETACEANS TECHLAB PVT.LTD , Ahmedabad.</p>
+					<p class="sub-heading">Web Designer <br>At CETACEANS TECHLAB PVT.LTD , Ahmedabad</p>
 
 					<p class="duration">May 2018 - Present</p>
 					<!--<p>I am Studing in Silver oak college of Engg. & Tech. </p>-->
