--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 				<p><b>Riddhi Patel.</b> <br/>Computer Engineer.</p>
 			</div>
 			<div class="profile-info">
-				<p class="key"><i class="fa fa-phone" aria-hidden="true"></i> Contact : +91 9712763584 </p>
+				<p class="key"><i class="fa fa-phone" aria-hidden="true"></i> Contact : +91 9328001720 / +1 705-302-4679  </p>
 			</div>
 
 			<div class="profile-info">
@@ -30,7 +30,7 @@
 
  			<div class="profile-info">
 				<p class="key" ><i class="fa fa-address-book" aria-hidden="true"></i> Address : </p>
-				<p class="value" >M-103, Garden Paradise, Behind DPS school, North-Bopal, Ahmedabad-380058</p>
+				<p class="value" >266, Commercial Avenue, Unit A , Timmins – P4N2X4 </p>
 			</div>
 			<div class="profile-info">
 				<p class="key" >Languages Known : English, Gujrati, Hindi</p>
@@ -49,18 +49,18 @@
 					<div class="info">
 					<p class="sub-heading">Web Designer <br>At CETACEANS TECHLAB PVT.LTD , Ahmedabad</p>
 
-					<p class="duration">May 2018 - Present</p>
+					<p class="duration">May 2018 - June 2020</p>
 					<!--<p>I am Studing in Silver oak college of Engg. & Tech. </p>-->
 				</div>
 				<div class="info">
-					<p class="sub-heading">IT-Traineer <br> At Apollo Medskills Ltd, Ahmedabad
+					<p class="sub-heading">Business Development Manager <br> At Finwise Pvt. Ltd, Ahmedabad
 </p>
-					<p class="duration">Auguest 2017 - November 2017</p> 
+					<p class="duration">January 2019 –  July 2020 </p> 
 					<!--<p><b>Reason for leave:</b> Due to Company Downsizing.</p>-->
 					
 				</div>
 				<div class="info">
-					<p class="sub-heading">Trainee Engineer <br> At iCreate Technologies, Ahmedabad</p>
+					<p class="sub-heading">Business Development Executive <br> At CareerQuiz Pvt. Ltd (weekends only) , Ahmedabad</p>
 					<p class="duration">June 2017 - April 2018 </p> 
 					</div>
 			</div>
