--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 					
 				</div>
 				<div class="info">
-					<p class="sub-heading">Business Development Executive <br> At CareerQuiz Pvt. Ltd (weekends only) , Ahmedabad</p>
+					<p class="sub-heading">Business Development Executive <br> At CareerQuiz Pvt. Ltd. (weekends only) , Ahmedabad</p>
 					<p class="duration">June 2017 - April 2018 </p> 
 					</div>
 			</div>
