--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 			
 			<div class="profile-info"> 
 				<p class="key">Other Contacts:</p>
-				<a class="social-media" href="https://www.facebook.com/photo.php?fbid=1695767720657897&set=a.1396431950591477.1073741826.100006740563201&type=3&source=11" target="_blank" ><i class="fa fa-facebook" aria-hidden="true"></i> </a>
+				<a class="social-media" href="https://www.facebook.com/profile.php?id=100006740563201" target="_blank" ><i class="fa fa-facebook" aria-hidden="true"></i> </a>
 				<a class="social-media" href="https://www.instagram.com/_ridds_/?hl=en" target="_blank" ><i class="fa fa-instagram" aria-hidden="true"></i> </a>
 			</div>
 		</div>
