--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 				<p><b>Riddhi Patel.</b> <br/>Computer Engineer.</p>
 			</div>
 			<div class="profile-info">
-				<p class="key"><i class="fa fa-phone" aria-hidden="true"></i> Contact : +91 9328001720 / +1 705-302-4679  </p>
+				<p class="key"><i class="fa fa-phone" aria-hidden="true"></i> Contact : +1 705-288-5013  </p>
 			</div>
 
 			<div class="profile-info">
@@ -55,7 +55,7 @@
 				<div class="info">
 					<p class="sub-heading">Business Development Manager <br> At Finwise Pvt. Ltd, Ahmedabad
 </p>
-					<p class="duration">January 2019 –  July 2020 </p> 
+					<p class="duration">January 2019 –  Auguest 2019 </p> 
 					<!--<p><b>Reason for leave:</b> Due to Company Downsizing.</p>-->
 					
 				</div>
