--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 					<!--<p>I am Studing in Silver oak college of Engg. & Tech. </p>-->
 				</div>
 				<div class="info">
-					<p class="sub-heading">Business Development Manager <br> At Finwise Pvt. Ltd, Ahmedabad
+					<p class="sub-heading">Business Development Manager <br> At Edugrow Careers, Ahmedabad
 </p>
 					<p class="duration">January 2019 –  Auguest 2019 </p> 
 					<!--<p><b>Reason for leave:</b> Due to Company Downsizing.</p>-->
@@ -61,7 +61,7 @@
 				</div>
 				<div class="info">
 					<p class="sub-heading">Business Development Executive <br> At CareerQuiz Pvt. Ltd. (weekends only) , Ahmedabad</p>
-					<p class="duration">June 2017 - April 2018 </p> 
+					<p class="duration">November 2019 - March 2020 </p> 
 					</div>
 			</div>
 			
